# content-based-image-retrieval

./: .gitignore  LICENSE  Makefile  README.md  app.py  build_dataset.py  build_features.py  evaluation.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test.py
features/: SURF_features.pck  autoencoder_features.pck
notebooks/: 1.0-evaluation.ipynb  convautoencoder.ipynb  evaluation.ipynb
outputs/: evaluation.csv  test.csv  train.csv
preprocessors/: aspectawarepreprocessor.py
scripts/: __init__.py  compressor.py  extractor.py  retrievor.py
scripts/datasets/: dataloader.py
scripts/utils/: utils.py
src/: build_features.py  evaluation.py
src/addons/: data.py  finder.py  metrics.py  retrievor.py
src/addons/extraction/: compressor.py  descriptor.py  extractor.py
src/data/: build_dataset.py  download_dataset.py
src/dataset/: build_dataset.py  download_dataset.py
src/features/: build_features.py
src/models/: make_prediction.py
src/scripts/: retrievor.py
tests/: test.py  test_metrics.py
