[tool.poetry]
name = "content-based-image-retrieval"
version = "0.1.0"
description = ""
authors = ["Kone Abdallah Hakim <71593784+schalappe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "content_based_image_retrieval"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
polars = "^0.19.13"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
jupyterlab = "^4.0.8"
rich = "^13.6.0"
python-dotenv = "^1.0.0"
opencv-python = "^4.8.1.78"
tensorflow = "^2.14.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
pylint = "^3.0.2"


[tool.black]
line-length = 119
target-version = ['py39', '310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

