[project]
name = "content-based-image-retrieval"
version = "0.0.0"
description = "The goal is to find the best algorithm for content-based image retrieval."
authors = [
    {name = "schalappe", email = "71593784+schalappe@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.26.0,<2.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "jupyterlab>=4.3.6,<5.0.0",
    "rich>=13.9.4,<14.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "opencv-python>=4.11.0.86,<5.0.0.0",
    "opencv-contrib-python>=4.11.0.86,<5.0.0.0",
    "tensorflow>=2.18.0,<2.19.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.6",
    "radon>=6.0.1",
    "tensorflow-metal>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
